Fix form button on mobile layout

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -272,6 +272,7 @@ section {
   width: 65%;
   position: absolute;
   margin-top: 20rem;
+  z-index: 1;
 }
 
 .form {
